

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- Added support for per-object adapter ACM timeout. This timeout is
  set with the <adapter>.ACM property. If not set, the connections
  from the object adapter will use by default the ACM timeout set at
  the communicator level with the Ice.ACM.Server property.

- Improved the Ice runtime invocation retry to always retry at least
  once on Ice::CloseConnectionException failures even if the retry
  limit has been reached. If retries are disabled, this ensures that
  the invocation will still be retried if it fails with an
  Ice::CloseConnectionException.

- Added Glacier2.AddConnectionContext property to enable forwarding
  connection information into the context of routed invocations. See
  the manual for more information. Glacier2.AddSSLContext has been
  deprecated, this new property should be used instead.

- Added Ice.Override.CloseTimeout property. This property overrides
  timeout settings used to close connections.

- Ice connections are now forcefully closed after sending a close
  connection message and once the connection timeout
  expires. Previously, the connection would only be closed when the
  object adapter or communicator was destroyed.

- The new Ice::ThreadHookPlugin class allows you to install thread 
  notification hooks during communicator initialization via plugins.

- Added Glacier2::Router::refreshSession, which keeps the client's
  Glacier2 session alive. This is useful in the case that the
  application architecture does not use a Glacier2 session
  manager. Modified demo/Glacier2/callback to demonstrate the use of
  this method.
