@@ -61,10 +61,10 @@ SessionControlClient::run(int argc, char* argv[])
     try
     {
         session->destroyFromClient();
-        test(false);
     }
-    catch(const Ice::ConnectionLostException&)
+    catch(const Ice::LocalException&)
     {
+        test(false);
     }
     try
     {
