@@ -890,22 +890,8 @@ allTests(const Ice::CommunicatorPtr& communicator)
         {
         }
 
-        try
-        {
-            router1->destroySession();
-            test(false);
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
-        try
-        {
-            router2->destroySession();
-            test(false);
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
+        router1->destroySession();
+        router2->destroySession();
 
         AdminSessionPrx admSession1, admSession2;
 
@@ -971,20 +957,8 @@ allTests(const Ice::CommunicatorPtr& communicator)
         {
         }
 
-        try
-        {
-            adminRouter1->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
-        try
-        {
-            adminRouter2->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
+        adminRouter1->destroySession();
+        adminRouter2->destroySession();
 
         cout << "ok" << endl;
     }
@@ -1051,21 +1025,9 @@ allTests(const Ice::CommunicatorPtr& communicator)
         {
         }
 
-        try
-        {
-            router1->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
-        try
-        {
-            router2->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
-
+        router1->destroySession();
+        router2->destroySession();
+            
         AdminSessionPrx admSession1, admSession2;
 
         //
@@ -1127,20 +1089,8 @@ allTests(const Ice::CommunicatorPtr& communicator)
         {
         }
 
-        try
-        {
-            adminRouter1->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
-        try
-        {
-            adminRouter2->destroySession();
-        }
-        catch(const Ice::ConnectionLostException&)
-        {
-        }
+        adminRouter1->destroySession();
+        adminRouter2->destroySession();
 
         cout << "ok" << endl;
     }
