@@ -364,7 +364,7 @@ public class SessionHelper
             }
             catch(Ice.ConnectionLostException)
             {
-                // Expected
+                // Expected if another thread invoked on an object from the session concurrently.
             }
             catch(SessionNotExistException)
             {
